[gd_scene load_steps=13 format=3 uid="uid://clwf74skvobs8"]

[ext_resource type="Script" path="res://enemy/skull_queen.gd" id="1_8em72"]
[ext_resource type="PackedScene" uid="uid://c0pv1j1w1ak38" path="res://ui/dot.tscn" id="2_lybg1"]
[ext_resource type="Shader" uid="uid://h4jx6i525oq3" path="res://enemy/on_hit.tres" id="3_nvfbk"]
[ext_resource type="Texture2D" uid="uid://5p8oyqkmdrf3" path="res://enemy/skull_queen_sleep.png" id="4_7ulc1"]
[ext_resource type="Texture2D" uid="uid://d3dq3a0bprw60" path="res://enemy/skull_queen_bite1.png" id="4_a30po"]
[ext_resource type="Texture2D" uid="uid://dgvfycj2sw8mo" path="res://enemy/skull_queen_bite2.png" id="6_k2kt2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_56ksm"]
resource_local_to_scene = true
shader = ExtResource("3_nvfbk")
shader_parameter/enabled = true
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82ml1"]
bg_color = Color(0, 0, 0, 0.266667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_akpgk"]
bg_color = Color(0.596078, 0, 0, 1)

[sub_resource type="Animation" id="Animation_bb2dl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkullQueenSleep:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jvo8a"]
resource_name = "on_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkullQueenSleep:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7seo"]
_data = {
"RESET": SubResource("Animation_bb2dl"),
"on_hit": SubResource("Animation_jvo8a")
}

[node name="SkullQueen" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 7
script = ExtResource("1_8em72")

[node name="Dot" parent="." instance=ExtResource("2_lybg1")]

[node name="SkullQueenSleep" type="Sprite2D" parent="."]
visibility_layer = 2
material = SubResource("ShaderMaterial_56ksm")
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_7ulc1")

[node name="SkullQueenBite1" type="Sprite2D" parent="."]
visible = false
visibility_layer = 2
material = SubResource("ShaderMaterial_56ksm")
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_a30po")

[node name="SkullQueenBite2" type="Sprite2D" parent="."]
visible = false
visibility_layer = 2
material = SubResource("ShaderMaterial_56ksm")
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_k2kt2")

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
offset_left = -4.0
offset_top = -15.0
offset_right = 4.0
offset_bottom = -13.0
theme_override_styles/background = SubResource("StyleBoxFlat_82ml1")
theme_override_styles/fill = SubResource("StyleBoxFlat_akpgk")
max_value = 500.0
show_percentage = false

[node name="OnHitAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a7seo")
}

[node name="MoveTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="WakeTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(0.05, 0.05)
polygon = PackedVector2Array(-38, -212, -37, -212, -37, -211, -35, -211, -35, -210, -31, -210, -31, -209, 16, -209, 16, -210, 20, -210, 20, -211, 22, -211, 22, -212, 23, -212, 23, -213, 24, -213, 24, -212, 25, -212, 25, -210, 24, -210, 24, -209, 23, -209, 23, -207, 22, -207, 22, -203, 21, -203, 21, -187, 22, -187, 22, -183, 23, -183, 23, -181, 24, -181, 24, -180, 25, -180, 25, -179, 27, -179, 27, -178, 31, -178, 31, -177, 78, -177, 78, -178, 82, -178, 82, -179, 84, -179, 84, -180, 85, -180, 85, -181, 87, -181, 87, -180, 88, -180, 88, -179, 90, -179, 90, -178, 94, -178, 94, -177, 109, -177, 109, -178, 113, -178, 113, -179, 115, -179, 115, -180, 116, -180, 116, -181, 117, -181, 117, -183, 118, -183, 118, -187, 119, -187, 119, -193, 131, -193, 131, -182, 125, -182, 125, -181, 121, -181, 121, -180, 119, -180, 119, -179, 118, -179, 118, -178, 117, -178, 117, -176, 116, -176, 116, -172, 115, -172, 115, -104, 109, -104, 109, -103, 105, -103, 105, -102, 103, -102, 103, -101, 102, -101, 102, -100, 101, -100, 101, -98, 100, -98, 100, -94, 99, -94, 99, -26, 94, -26, 94, -25, 90, -25, 90, -24, 88, -24, 88, -23, 87, -23, 87, -22, 86, -22, 86, -20, 85, -20, 85, -16, 84, -16, 84, 16, 85, 16, 85, 20, 86, 20, 86, 22, 87, 22, 87, 23, 88, 23, 88, 24, 87, 24, 87, 25, 86, 25, 86, 27, 85, 27, 85, 31, 84, 31, 84, 37, 78, 37, 78, 38, 74, 38, 74, 39, 72, 39, 72, 40, 71, 40, 71, 41, 70, 41, 70, 43, 69, 43, 69, 47, 68, 47, 68, 53, 63, 53, 63, 54, 59, 54, 59, 55, 57, 55, 57, 56, 56, 56, 56, 57, 55, 57, 55, 59, 54, 59, 54, 63, 53, 63, 53, 141, 54, 141, 54, 145, 55, 145, 55, 147, 56, 147, 56, 148, 57, 148, 57, 149, 59, 149, 59, 150, 63, 150, 63, 151, 68, 151, 68, 156, 69, 156, 69, 160, 70, 160, 70, 162, 71, 162, 71, 163, 72, 163, 72, 164, 74, 164, 74, 165, 78, 165, 78, 166, 84, 166, 84, 172, 85, 172, 85, 176, 86, 176, 86, 178, 87, 178, 87, 179, 88, 179, 88, 180, 90, 180, 90, 181, 94, 181, 94, 182, 99, 182, 99, 203, 100, 203, 100, 207, 101, 207, 101, 209, 102, 209, 102, 210, 103, 210, 103, 211, 105, 211, 105, 212, 109, 212, 109, 213, 115, 213, 115, 224, -131, 224, -131, 213, -125, 213, -125, 212, -121, 212, -121, 211, -119, 211, -119, 210, -118, 210, -118, 209, -117, 209, -117, 207, -116, 207, -116, 203, -115, 203, -115, 182, -109, 182, -109, 181, -105, 181, -105, 180, -103, 180, -103, 179, -102, 179, -102, 178, -101, 178, -101, 176, -100, 176, -100, 172, -99, 172, -99, 166, -94, 166, -94, 165, -90, 165, -90, 164, -88, 164, -88, 163, -87, 163, -87, 162, -86, 162, -86, 160, -85, 160, -85, 156, -84, 156, -84, 151, -78, 151, -78, 150, -74, 150, -74, 149, -72, 149, -72, 148, -71, 148, -71, 147, -70, 147, -70, 145, -69, 145, -69, 141, -68, 141, -68, 63, -69, 63, -69, 59, -70, 59, -70, 57, -71, 57, -71, 56, -72, 56, -72, 55, -74, 55, -74, 54, -78, 54, -78, 53, -84, 53, -84, 47, -85, 47, -85, 43, -86, 43, -86, 41, -87, 41, -87, 40, -88, 40, -88, 39, -90, 39, -90, 38, -94, 38, -94, 37, -99, 37, -99, 31, -100, 31, -100, 27, -101, 27, -101, 25, -102, 25, -102, 24, -103, 24, -103, 23, -102, 23, -102, 22, -101, 22, -101, 20, -100, 20, -100, 16, -99, 16, -99, -16, -100, -16, -100, -20, -101, -20, -101, -22, -102, -22, -102, -23, -103, -23, -103, -24, -105, -24, -105, -25, -109, -25, -109, -26, -115, -26, -115, -94, -116, -94, -116, -98, -117, -98, -117, -100, -118, -100, -118, -101, -119, -101, -119, -102, -121, -102, -121, -103, -125, -103, -125, -104, -131, -104, -131, -172, -132, -172, -132, -176, -133, -176, -133, -178, -134, -178, -134, -179, -135, -179, -135, -180, -137, -180, -137, -181, -141, -181, -141, -182, -146, -182, -146, -193, -135, -193, -135, -187, -134, -187, -134, -183, -133, -183, -133, -181, -132, -181, -132, -180, -131, -180, -131, -179, -129, -179, -129, -178, -125, -178, -125, -177, -109, -177, -109, -178, -105, -178, -105, -179, -103, -179, -103, -180, -102, -180, -102, -181, -101, -181, -101, -180, -100, -180, -100, -179, -98, -179, -98, -178, -94, -178, -94, -177, -47, -177, -47, -178, -43, -178, -43, -179, -41, -179, -41, -180, -40, -180, -40, -181, -39, -181, -39, -183, -38, -183, -38, -187, -37, -187, -37, -203, -38, -203, -38, -207, -39, -207, -39, -209, -40, -209, -40, -210, -41, -210, -41, -212, -40, -212, -40, -213, -38, -213)

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="WakeTimer" to="." method="_on_wake_timer_timeout"]
